--- a/index.html
+++ b/index.html
@@ -49,9 +49,15 @@
           <div class="example">
             <ul class="second-navigation">
               <li>
+                <svg class="icons-menu" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
                 <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
               </li>
               <li>
+                <svg class="icons-menu" width="16" height="12">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
                 <a href="tel:+48111111111"> +48111 111 111</a>
               </li>
             </ul>
