--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
           <div class="lorem">
             <ul class="content">
               <li>
+                <svg>
+                  <use href="./images/icons.svg#icon-group-one"></use>
+                </svg>
+
                 <h3 class="lorem-text">LOREM IPSUM</h3>
                 <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
