--- a/index.html
+++ b/index.html
@@ -49,16 +49,20 @@
           <div class="example">
             <ul class="second-navigation">
               <li>
-                <svg class="icons-menu" width="16" height="12">
-                  <use href="./images/icons.svg#icon-envelope"></use>
-                </svg>
-                <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+                <a class="icons-menu" href="mailto:info@devstudio.com">
+                  <svg class="icons-menu" width="16" height="12">
+                    <use href="./images/icons.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
               </li>
               <li>
-                <svg class="icons-menu" width="16" height="12">
-                  <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg>
-                <a href="tel:+48111111111"> +48111 111 111</a>
+                <a class="icons-menu" href="tel:+48111111111">
+                  <svg class="icons-menu" width="16" height="12">
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                  </svg>
+                  +48111 111 111</a
+                >
               </li>
             </ul>
           </div>
@@ -83,7 +87,7 @@
             <ul class="content">
               <li>
                 <svg>
-                  <use href="./images/icons.svg#icon-group-one"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
 
                 <h3 class="lorem-text">LOREM IPSUM</h3>
@@ -93,6 +97,9 @@
                 </p>
               </li>
               <li>
+                <svg>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
                 <h3 class="lorem-text">LOREM IPSUM</h3>
                 <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
