--- a/index.html
+++ b/index.html
@@ -50,15 +50,16 @@
             <ul class="second-navigation">
               <li>
                 <a class="icons-menu" href="mailto:info@devstudio.com">
-                  <svg class="icons-menu" width="16" height="12">
+                  <svg width="16" height="12">
                     <use href="./images/icons.svg#icon-envelope"></use>
                   </svg>
                   info@devstudio.com
                 </a>
               </li>
+
               <li>
                 <a class="icons-menu" href="tel:+48111111111">
-                  <svg class="icons-menu" width="16" height="12">
+                  <svg width="16" height="12">
                     <use href="./images/icons.svg#icon-smartphone"></use>
                   </svg>
                   +48111 111 111</a
@@ -86,9 +87,11 @@
           <div class="lorem">
             <ul class="content">
               <li>
-                <svg>
-                  <use href="./images/icons.svg#icon-antenna-1"></use>
-                </svg>
+                <div class="pink-box">
+                  <svg class="small-content">
+                    <use href="./images/icons.svg#icon-antenna-1"></use>
+                  </svg>
+                </div>
 
                 <h3 class="lorem-text">LOREM IPSUM</h3>
                 <p class="paragraph">
@@ -97,9 +100,11 @@
                 </p>
               </li>
               <li>
-                <svg>
-                  <use href="./images/icons.svg#icon-clock-1"></use>
-                </svg>
+                <div class="pink-box">
+                  <svg class="small-content">
+                    <use href="./images/icons.svg#icon-clock-1"></use>
+                  </svg>
+                </div>
                 <h3 class="lorem-text">LOREM IPSUM</h3>
                 <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -107,6 +112,11 @@
                 </p>
               </li>
               <li>
+                <div class="pink-box">
+                  <svg class="small-content">
+                    <use href="./images/icons.svg#icon-diagram-1"></use>
+                  </svg>
+                </div>
                 <h3 class="lorem-text">LOREM IPSUM</h3>
                 <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -114,6 +124,11 @@
                 </p>
               </li>
               <li>
+                <div class="pink-box">
+                  <svg class="small-content">
+                    <use href="./images/icons.svg#icon-astronaut-1"></use>
+                  </svg>
+                </div>
                 <h3 class="lorem-text">LOREM IPSUM</h3>
                 <p class="paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -177,6 +192,47 @@
 
                   <h4 class="title-box">John Doe</h4>
                   <p class="job">Product Designer</p>
+                  <div>
+                    <ul class="wheel-box">
+                      <li class="wheel">
+                        <a href="https://www.instagram.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-instagram-2"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="https://www.twitter.com">
+                          <svg class="dot" width="20" height="20">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="https://www.facebook.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-facebook-1"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="https://www.linkedin.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-linkedin-1"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li>
@@ -222,15 +278,70 @@
           </div>
         </div>
       </section>
+      <section class="clients">
+        <div class="container">
+          <h2 class="title-position">Nasi klienci</h2>
+
+          <ul class="client-position">
+            <li>
+              <div class="grey-box">
+                <svg class="clients-box" width="106" height="60.04">
+                  <use href="./images/icons.svg#icon-client-1"></use>
+                </svg>
+              </div>
+            </li>
+
+            <li>
+              <div class="grey-box">
+                <svg class="clients-box" width="106" height="60.04">
+                  <use href="./images/icons.svg#icon-client-2"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="grey-box">
+                <svg class="clients-box" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-3"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="grey-box">
+                <svg class="clients-box" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-4"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="grey-box">
+                <svg class="clients-box" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-5"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="grey-box">
+                <svg class="clients-box" width="106" height="60">
+                  <use href="./images/icons.svg#icon-client-6"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <section class="footer-page">
       <div class="container">
         <footer class="footer-box">
-          <a class="footer-logo" href="https://www.Webstudio.com">
-            <span class="logo-item">Web</span
-            ><span class="logo-item-footer">Studio</span>
-          </a>
+          <div class="join-us-position">
+            <a class="footer-logo" href="https://www.Webstudio.com">
+              <span class="logo-item">Web</span
+              ><span class="logo-item-footer">Studio</span>
+            </a>
+
+            <h5 class="join-us">DOŁĄCZ DO NAS</h5>
+          </div>
           <ul class="footer-adress">
             <li>
               <address>m. Warszawa, Aleje Jerozolimskie 21</address>
