--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 
                   <h4 class="title-box">John Doe</h4>
                   <p class="job">Product Designer</p>
-                  <div>
+                  <div class="icons-position">
                     <ul class="wheel-box">
                       <li class="wheel">
-                        <a href="https://www.instagram.com">
+                        <a class="back-icon" href="https://www.instagram.com">
                           <svg class="dot" width="20" height="20">
                             <use
                               href="./images/icons.svg#icon-instagram-2"
@@ -204,16 +204,16 @@
                         </a>
                       </li>
 
-                      <li>
-                        <a href="https://www.twitter.com">
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.twitter.com">
                           <svg class="dot" width="20" height="20">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                           </svg>
                         </a>
                       </li>
 
-                      <li>
-                        <a href="https://www.facebook.com">
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.facebook.com">
                           <svg class="dot" width="20" height="20">
                             <use
                               href="./images/icons.svg#icon-facebook-1"
@@ -222,8 +222,8 @@
                         </a>
                       </li>
 
-                      <li>
-                        <a href="https://www.linkedin.com">
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.linkedin.com">
                           <svg class="dot" width="20" height="20">
                             <use
                               href="./images/icons.svg#icon-linkedin-1"
@@ -246,6 +246,47 @@
 
                   <h4 class="title-box">John Doe</h4>
                   <p class="job">Frontend Developer</p>
+                  <div class="icons-position">
+                    <ul class="wheel-box">
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.instagram.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-instagram-2"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.twitter.com">
+                          <svg class="dot" width="20" height="20">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.facebook.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-facebook-1"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.linkedin.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-linkedin-1"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li>
@@ -259,6 +300,47 @@
 
                   <h4 class="title-box">John Doe</h4>
                   <p class="job">Marketing</p>
+                  <div class="icons-position">
+                    <ul class="wheel-box">
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.instagram.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-instagram-2"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.twitter.com">
+                          <svg class="dot" width="20" height="20">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.facebook.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-facebook-1"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.linkedin.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-linkedin-1"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li>
@@ -272,6 +354,47 @@
 
                   <h4 class="title-box">John Doe</h4>
                   <p class="job">UI Designer</p>
+                  <div class="icons-position">
+                    <ul class="wheel-box">
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.instagram.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-instagram-2"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.twitter.com">
+                          <svg class="dot" width="20" height="20">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.facebook.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-facebook-1"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+
+                      <li class="wheel">
+                        <a class="back-icon" href="https://www.linkedin.com">
+                          <svg class="dot" width="20" height="20">
+                            <use
+                              href="./images/icons.svg#icon-linkedin-1"
+                            ></use>
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </li>
             </ul>
@@ -342,22 +465,59 @@
 
             <h5 class="join-us">DOŁĄCZ DO NAS</h5>
           </div>
-          <ul class="footer-adress">
-            <li>
-              <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-            </li>
-            <li>
-              <a class="logo-item-footer" href="mailto:info@example.com">
-                info@example.com
-              </a>
-            </li>
+          <div class="column-footer">
+            <ul class="footer-adress">
+              <li>
+                <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+              </li>
+              <li>
+                <a class="logo-item-footer" href="mailto:info@example.com">
+                  info@example.com
+                </a>
+              </li>
 
-            <li>
-              <a class="logo-item-footer" href="tel:+48111111111"
-                >+48 111 111 111</a
-              >
-            </li>
-          </ul>
+              <li>
+                <a class="logo-item-footer" href="tel:+48111111111"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+            <div class="icons-position">
+              <ul class="wheel-footer">
+                <li class="wheel">
+                  <a class="back-icon-footer" href="https://www.instagram.com">
+                    <svg class="dot-footer" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="wheel">
+                  <a class="back-icon-footer" href="https://www.twitter.com">
+                    <svg class="dot-footer" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="wheel">
+                  <a class="back-icon-footer" href="https://www.facebook.com">
+                    <svg class="dot-footer" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="wheel">
+                  <a class="back-icon-footer" href="https://www.linkedin.com">
+                    <svg class="dot-footer" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </footer>
       </div>
     </section>
