--- a/portfolio.html
+++ b/portfolio.html
@@ -49,10 +49,20 @@
           <div class="example">
             <ul class="second-navigation">
               <li>
-                <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+                <a class="icons-menu" href="mailto:info@devstudio.com">
+                  <svg width="16" height="12">
+                    <use href="./images/icons.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
               </li>
               <li>
-                <a href="tel:+48111111111"> +48111 111 111</a>
+                <a class="icons-menu" href="tel:+48111111111">
+                  <svg width="16" height="12">
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                  </svg>
+                  +48111 111 111</a
+                >
               </li>
             </ul>
           </div>
@@ -238,24 +248,65 @@
     <section class="footer-page">
       <div class="container">
         <footer class="footer-box">
-          <a class="footer-logo" href="https://www.Webstudio.com">
-            <span class="logo-item">Web</span
-            ><span class="logo-item-footer">Studio</span>
-          </a>
-          <ul class="footer-adress">
-            <li><address>m. Warszawa, Aleje Jerozolimskie 21</address></li>
-            <li>
-              <a class="logo-item-footer" href="mailto:info@example.com">
-                info@example.com
-              </a>
-            </li>
+          <div class="join-us-position">
+            <a class="footer-logo" href="https://www.Webstudio.com">
+              <span class="logo-item">Web</span
+              ><span class="logo-item-footer">Studio</span>
+            </a>
 
-            <li>
-              <a class="logo-item-footer" href="tel:+48111111111"
-                >+48 111 111 111</a
-              >
-            </li>
-          </ul>
+            <h5 class="join-us">DOŁĄCZ DO NAS</h5>
+          </div>
+          <div class="column-footer">
+            <ul class="footer-adress">
+              <li><address>m. Warszawa, Aleje Jerozolimskie 21</address></li>
+              <li>
+                <a class="logo-item-footer" href="mailto:info@example.com">
+                  info@example.com
+                </a>
+              </li>
+
+              <li>
+                <a class="logo-item-footer" href="tel:+48111111111"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+            <div class="icons-position">
+              <ul class="wheel-footer">
+                <li class="wheel">
+                  <a class="back-icon-footer" href="https://www.instagram.com">
+                    <svg class="dot-footer" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="wheel">
+                  <a class="back-icon-footer" href="https://www.twitter.com">
+                    <svg class="dot-footer" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="wheel">
+                  <a class="back-icon-footer" href="https://www.facebook.com">
+                    <svg class="dot-footer" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="wheel">
+                  <a class="back-icon-footer" href="https://www.linkedin.com">
+                    <svg class="dot-footer" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </footer>
       </div>
     </section>
