--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
   </head>
   <body>
@@ -408,7 +408,7 @@
           <ul class="client-position">
             <li>
               <div class="grey-box">
-                <svg class="clients-box" width="106" height="60.04">
+                <svg width="106" height="60.04">
                   <use href="./images/icons.svg#icon-client-1"></use>
                 </svg>
               </div>
@@ -416,35 +416,35 @@
 
             <li>
               <div class="grey-box">
-                <svg class="clients-box" width="106" height="60.04">
+                <svg width="106" height="60.04">
                   <use href="./images/icons.svg#icon-client-2"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="grey-box">
-                <svg class="clients-box" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client-3"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="grey-box">
-                <svg class="clients-box" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client-4"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="grey-box">
-                <svg class="clients-box" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client-5"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="grey-box">
-                <svg class="clients-box" width="106" height="60">
+                <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client-6"></use>
                 </svg>
               </div>
